individual blog with like buttons (no functionality)

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,12 @@
   margin-bottom: 10px;
   
 }
+
+
+.BlogStyle{
+  paddingTop: 10;
+  paddingLeft: 2;
+  border: 'solid';
+  borderWidth: 1;
+  marginBottom: 5
+}
